# book-translator

./: .gitignore  LICENSE  README.md  README_ja.md  README_zh.md  SKILL.md  pyproject.toml  requirements.txt
examples/: terminology.txt
references/: translation-guide.md
scripts/: build_docx.py  ocr_vision.py
