[project]
name = "book-translator"
version = "0.1.0"
description = "Digitize scanned academic books: PDF → OCR → Translate → Formatted docx"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "MuchenHan"}]
keywords = ["ocr", "translation", "academic", "docx", "macos-vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "pyobjc-framework-Vision>=10.0",
    "pyobjc-framework-Quartz>=10.0",
]

[project.urls]
Homepage = "https://github.com/MuchenHan/book-translator"
Issues = "https://github.com/MuchenHan/book-translator/issues"
